--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
     <div class="form-element">
        <button id="album-button">Add Album</button>
+       <button id="clear-button">Clear All users</button>
     </div>
 
     <div id="album-list"></div>
